force-app/main/default/objects/copado__Deployment_Job__c/fields/copado__To_Org_Name__c.field-meta.xml
<CustomField>
    <fullName>copado__To_Org_Name__c</fullName>
    <formula>copado__Destination_Org__r.copado__To_Org__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>To Org Name</label>
    <type>Text</type>
</CustomField>